# cipher-prototype

./: .gitignore  Cargo.toml  LICENSE.md  README.md  T_init_matrix.txt
cuda/: test_implementation.py
data/: .gitattributes  challenge.encrypted
data/init_matrix/: S_init_matrix.txt
rfc/: RFC-0-ext.typ  RFC-0.typ  RFC-1.typ
script/: gpu_implementation.py  requirements.txt
src/: automata.rs  encrypt.rs  lib.rs  matrix.rs  parse.rs  transpose.rs
src/matrix/: mod.rs  toroidal_binary_matrix.rs  toroidal_bit_matrix.rs  toroidal_bool_matrix.rs
src/parse/: mod.rs  table.rs  typing.rs
